k8s-native-app-chart/native-app-chart/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-infra
  hostnames: 
  - "some.exampledomain.example"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: native-service
      port: 8080
